--- a/ai/students.html
+++ b/ai/students.html
@@ -23,22 +23,36 @@
 	  <center>PhD</center>
 	  <p><br>
     <div class="article-list">
-      <a href="https://hal.science/hal-04261183v1/document" class="article-card"> Marjan Ghazvininejad </a>
-      <a href="https://hal.science/hal-04080486v1/document" class="article-card"> Nima Pourdamghani </a>
+      <a href="" class="article-card">Nima Pourdamghani </a>
+      <a href="" class="article-card">Xing Shi</a>
+      <a href="" class="article-card">Marjan Ghazvininejad </a>
+      <a href="" class="article-card">Qing Dou</a>
+      <a href="" class="article-card">Steve DeNeefe</a>
+      <a href="" class="article-card">Sujith Ravi </a>
+      <a href="" class="article-card">Jonathan May</a>
+      <a href="" class="article-card">Yaser Al-Onaizan</a>
+      <a href="" class="article-card">Kenji Yamada</a>
+      <a href="" class="article-card">Irene Langkilde</a>
+      <a href="" class="article-card">Philipp Koehn</a>
+      <a href="" class="article-card">Ishwar Chander</a>
+      <a href="" class="article-card">Victoria Fossum (co-)</a>
+      <a href="" class="article-card">Liang Huang (co-)</a>
+      <a href="" class="article-card">Shou-De Lin (co-)</a>
     </div>
     <p><br>
 	  <center>Masters</center>
     <p><br>
     <div class="article-list">
-      <a href="https://hal.science/hal-04261183v1/document" class="article-card"> Bryant Huang </a>
+      <a href="" class="article-card">Bryant Huang </a>
+      <a href="https://kevincrawfordknight.github.io/papers/ms-thesis-nada2.pdf" class="article-card">Nada Aldarrab</a>
 
     </div>
     <p><br>
-	  <center>Undergraduate</center>
+	  <center>Undergrad</center>
     <p><br>
     <div class="article-list">
-      <a href="https://hal.science/hal-04261183v1/document" class="article-card"> Barret Zoph</a>
-      <a href="https://hal.science/hal-04261183v1/document" class="article-card"> Jonathan Graehl</a>
+      <a href="" class="article-card">Barret Zoph</a>
+      <a href="" class="article-card">Jonathan Graehl</a>
 
     </div>
 
