--- a/ai/articles.html
+++ b/ai/articles.html
@@ -21,13 +21,44 @@
 
   <main>
     <div class="article-list">
-      <a href="https://hal.science/hal-04261183v1/document" class="article-card">
-        Collatz High Cycles Do Not Exist &nbsp;•&nbsp; PDF
-      </a>
-      
-      <a href="https://hal.science/hal-04080486v1/document" class="article-card">
-        A Small Collatz Rule without the Plus One &nbsp;•&nbsp; PDF
-      </a>
+
+
+<div class="article-list">
+
+  <center>2021</center>
+  <p><br>
+  <a href="https://arxiv.org/abs/2109.09577"      class="article-card">MeetDot: Videoconferencing with Live Translation Captions&nbsp;•&nbsp;PDF</a>
+  <a href="https://arxiv.org/abs/2109.07230"      class="article-card">Learning Mathematical Properties of Integers&nbsp;•&nbsp;PDF</a>
+  <a href="https://arxiv.org/abs/2011.04761"      class="article-card">MUSE: Textual Attributes Guided Portrait Painting Generation&nbsp;•&nbsp;PDF</a>
+  <a href="https://arxiv.org/pdf/2102.04506.pdf"  class="article-card">A Hybrid Task‑Oriented Dialog System with Domain and Task Adaptive Pretraining&nbsp;•&nbsp;PDF</a>
+  <a href="https://arxiv.org/abs/2012.13454"      class="article-card">Why Neural Machine Translation Prefers Empty Outputs&nbsp;•&nbsp;PDF</a>
+  <a href="https://arxiv.org/abs/2010.04747"      class="article-card">MEEP: An Open‑Source Platform for Human‑Human Dialog Collection and End‑to‑End Agent Training&nbsp;•&nbsp;PDF</a>
+  <a href="https://arxiv.org/abs/2109.09597"      class="article-card">Two Approaches to Building Collaborative, Task‑Oriented Dialog Agents through Self‑Play&nbsp;•&nbsp;PDF</a>
+
+  <center>2020</center>
+  <p><br>
+  <a href="https://arxiv.org/pdf/2010.08185.pdf"                               class="article-card">DiDi's Machine Translation System for WMT2020&nbsp;•&nbsp;PDF</a>
+  <a href="https://arxiv.org/pdf/2010.04746.pdf"                               class="article-card">Solving Historical Dictionary Codes with a Neural Language Model&nbsp;•&nbsp;PDF</a>
+  <a href="https://arxiv.org/pdf/2010.04744.pdf"                               class="article-card">Learning to Pronounce Chinese Without a Pronunciation Dictionary&nbsp;•&nbsp;PDF</a>
+  <a href="https://www.aclweb.org/anthology/2020.iwslt-1.1v2.pdf"              class="article-card">Findings of the IWSLT 2020 Evaluation Campaign&nbsp;•&nbsp;PDF</a>
+  <a href="https://www.aclweb.org/anthology/2020.acl-main.756.pdf"             class="article-card">Parallel Corpus Filtering via Pre‑trained Language Models&nbsp;•&nbsp;PDF</a>
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </div>
   </main>
 
