--- a/ai/articles.html
+++ b/ai/articles.html
@@ -24,22 +24,22 @@
   <center>Selected Papers</center>
   <p><br>
 
-  <a href="papers/p58-knight.pdf"                                           class="article-card">Connectionist Ideas and Algorithms</a>
-  <a href="http://www.aclweb.org/anthology/P/P97/P97-1017.pdf"             class="article-card">Machine Transliteration</a>
-  <a href="http://www.aclweb.org/anthology/P/P98/P98-1116.pdf"             class="article-card">Generation that Exploits Corpus‑based Statistical Knowledge</a>
-  <a href="http://www.aclweb.org/anthology/W/W99/W99-0906.pdf"             class="article-card">A Computational Approach to Deciphering Unknown Scripts</a>
-  <a href="papers/wkbk.pdf"                                                class="article-card">A Statistical MT Tutorial Workbook</a>
-  <a href="http://www.aclweb.org/anthology/P/P01/P01-1067.pdf"             class="article-card">A Syntax‑Based Statistical Translation Model</a>
-  <a href="http://www.aclweb.org/anthology/N/N04/N04-1035.pdf"             class="article-card">What’s in a Translation Rule?</a>
-  <a href="http://www.aclweb.org/anthology/W/W11/W11-1202.pdf"             class="article-card">The Copiale Cipher</a>
-  <a href="http://www.aclweb.org/anthology/P/P11/P11-1002.pdf"             class="article-card">Deciphering Foreign Language</a>
-  <a href="http://www.aclweb.org/anthology/W13-2322"                       class="article-card">Abstract Meaning Representation for Sembanking</a>
-  <a href="http://www.aclweb.org/anthology/P14-2046.pdf"                   class="article-card">How to Speak a Language without Knowing It</a>
-  <a href="http://www.aclweb.org/anthology/D15-1105.pdf"                   class="article-card">How Much Information Does a Human Translator Add?</a>
-  <a href="https://aclweb.org/anthology/D16-1159.pdf"                      class="article-card">Does String‑Based Neural MT Learn Source Syntax?</a>
-  <a href="https://aclweb.org/anthology/D16-1163.pdf"                      class="article-card">Transfer Learning for Low‑Resource Neural MT</a>
-  <a href="https://aclweb.org/anthology/D16-1126.pdf"                      class="article-card">Generating Topical Poetry</a>
-  <a href="http://aclweb.org/anthology/N18-1205.pdf"                       class="article-card">Recurrent Neural Networks as Weighted Language Recognizers</a>
+  <a href="papers/p58-knight.pdf"                                           class="article-card">Connectionist Ideas and Algorithms (1990)</a>
+  <a href="http://www.aclweb.org/anthology/P/P97/P97-1017.pdf"             class="article-card">Machine Transliteration (1997)</a>
+  <a href="http://www.aclweb.org/anthology/P/P98/P98-1116.pdf"             class="article-card">Generation that Exploits Corpus‑based Statistical Knowledge (1998)</a>
+  <a href="http://www.aclweb.org/anthology/W/W99/W99-0906.pdf"             class="article-card">A Computational Approach to Deciphering Unknown Scripts (1999)</a>
+  <a href="https://kevincrawfordknight.github.io/papers/wkbk.pdf"                                                class="article-card">A Statistical MT Tutorial Workbook (1999)</a>
+  <a href="http://www.aclweb.org/anthology/P/P01/P01-1067.pdf"             class="article-card">A Syntax‑Based Statistical Translation Model</a (2001)>
+  <a href="http://www.aclweb.org/anthology/N/N04/N04-1035.pdf"             class="article-card">What’s in a Translation Rule? (2004)</a>
+  <a href="http://www.aclweb.org/anthology/W/W11/W11-1202.pdf"             class="article-card">The Copiale Cipher (2011)</a>
+  <a href="http://www.aclweb.org/anthology/P/P11/P11-1002.pdf"             class="article-card">Deciphering Foreign Language (2011)</a>
+  <a href="http://www.aclweb.org/anthology/W13-2322"                       class="article-card">Abstract Meaning Representation for Sembanking (2013)</a>
+  <a href="http://www.aclweb.org/anthology/P14-2046.pdf"                   class="article-card">How to Speak a Language without Knowing It (2014)</a>
+  <a href="http://www.aclweb.org/anthology/D15-1105.pdf"                   class="article-card">How Much Information Does a Human Translator Add? (2015)</a>
+  <a href="https://aclweb.org/anthology/D16-1159.pdf"                      class="article-card">Does String‑Based Neural MT Learn Source Syntax? (2016)</a>
+  <a href="https://aclweb.org/anthology/D16-1163.pdf"                      class="article-card">Transfer Learning for Low‑Resource Neural MT (2016)</a>
+  <a href="https://aclweb.org/anthology/D16-1126.pdf"                      class="article-card">Generating Topical Poetry (2016)</a>
+  <a href="http://aclweb.org/anthology/N18-1205.pdf"                       class="article-card">Recurrent Neural Networks as Weighted Language Recognizers (2018)</a>
 
 
   <center>2021</center>
