--- a/ai/articles.html
+++ b/ai/articles.html
@@ -24,7 +24,7 @@
   <center>Selected Papers</center>
   <p><br>
 
-  <a href="papers/p58-knight.pdf"                                           class="article-card">Connectionist Ideas and Algorithms (1990)</a>
+  <a href="https://kevincrawfordknight.github.io/papers/p58-knight.pdf"                                           class="article-card">Connectionist Ideas and Algorithms (1990)</a>
   <a href="http://www.aclweb.org/anthology/P/P97/P97-1017.pdf"             class="article-card">Machine Transliteration (1997)</a>
   <a href="http://www.aclweb.org/anthology/P/P98/P98-1116.pdf"             class="article-card">Generation that Exploits Corpus‑based Statistical Knowledge (1998)</a>
   <a href="http://www.aclweb.org/anthology/W/W99/W99-0906.pdf"             class="article-card">A Computational Approach to Deciphering Unknown Scripts (1999)</a>
@@ -176,7 +176,7 @@
 
   <center>2009</center>
   <p><br>
-  <a href="papers/bayes-with-tears.pdf" class="article-card">Bayesian Inference with Tears</a>
+  <a href="https://kevincrawfordknight.github.io/papers/bayes-with-tears.pdf" class="article-card">Bayesian Inference with Tears</a>
   <a href="http://www.aclweb.org/anthology/J/J09/J09-4009.pdf" class="article-card">Binarization of Synchronous Context‑Free Grammars</a>
   <a href="http://www.aclweb.org/anthology/D/D09/D09-1076.pdf" class="article-card">Synchronous Tree Adjoining Machine Translation</a>
   <a href="http://www.aclweb.org/anthology/P/P09/P09-1057.pdf" class="article-card">Minimized Models for Unsupervised POS Tagging</a>
@@ -197,8 +197,8 @@
   <a href="http://www.aclweb.org/anthology/P/P08/P08-1045.pdf" class="article-card">Name Translation in SMT: Learning When to Transliterate</a>
   <a href="http://www.aclweb.org/anthology/D/D08/D08-1085.pdf" class="article-card">Attacking Decipherment Problems with Low‑Order N‑grams</a>
   <a href="http://www.aclweb.org/anthology/D/D08/D08-1093.pdf" class="article-card">Automatic Prediction of Parser Accuracy</a>
-  <a href="papers/amta2008su.pdf" class="article-card">Overcoming Vocabulary Sparsity in MT Using Lattices</a>
-  <a href="papers/amta2008fossum.pdf" class="article-card">Chinese‑English Word Alignments for PP‑Attachment</a>
+  <a href="https://kevincrawfordknight.github.io/papers/amta2008su.pdf" class="article-card">Overcoming Vocabulary Sparsity in MT Using Lattices</a>
+  <a href="https://kevincrawfordknight.github.io/papers/amta2008fossum.pdf" class="article-card">Chinese‑English Word Alignments for PP‑Attachment</a>
 
   <center>2007</center>
   <p><br>
@@ -209,12 +209,12 @@
 
   <center>2006</center>
   <p><br>
-  <a href="papers/lhuang-amta.pdf" class="article-card">Statistical Syntax‑Directed Translation with Extended Domain of Locality</a>
-  <a href="papers/ciaa06.pdf" class="article-card">Tiburon: A Weighted Tree Automata Toolkit</a>
-  <a href="papers/iraqi_interspeech.pdf" class="article-card">Building an English‑Iraqi Arabic MT System for Speech</a>
+  <a href="https://kevincrawfordknight.github.io/papers/lhuang-amta.pdf" class="article-card">Statistical Syntax‑Directed Translation with Extended Domain of Locality</a>
+  <a href="https://kevincrawfordknight.github.io/papers/ciaa06.pdf" class="article-card">Tiburon: A Weighted Tree Automata Toolkit</a>
+  <a href="https://kevincrawfordknight.github.io/papers/iraqi_interspeech.pdf" class="article-card">Building an English‑Iraqi Arabic MT System for Speech</a>
   <a href="http://www.aclweb.org/anthology/P/P06/P06-2065.pdf" class="article-card">Unsupervised Analysis for Decipherment Problems</a>
   <a href="http://www.aclweb.org/anthology/P/P06/P06-1121.pdf" class="article-card">Scalable Inference and Training of Context‑Rich Syntactic Models</a>
-  <a href="papers/AIJ_final.pdf" class="article-card">Discovering the Linear Writing Order of Nyushu Script</a>
+  <a href="https://kevincrawfordknight.github.io/papers/AIJ_final.pdf" class="article-card">Discovering the Linear Writing Order of Nyushu Script</a>
   <a href="http://www.aclweb.org/anthology/N/N06/N06-1045.pdf" class="article-card">A Better N‑Best List via Determinization of WFTAs</a>
   <a href="http://www.aclweb.org/anthology/N/N06/N06-1001.pdf" class="article-card">Capitalizing Machine Translation</a>
   <a href="http://www.aclweb.org/anthology/N/N06/N06-1033.pdf" class="article-card">Synchronous Binarization for Machine Translation</a>
@@ -226,7 +226,7 @@
   <p><br>
   <a href="http://www.aclweb.org/anthology/P/P05/P05-3025.pdf" class="article-card">Interactively Exploring a Machine Translation Model</a>
   <a href="http://ieeexplore.ieee.org/document/1416466/?reload=true"       class="article-card">Machine Translation in the Year 2004</a>
-  <a href="papers/p5.pdf"                                                  class="article-card">An Overview of Probabilistic Tree Transducers for NLP</a>
+  <a href="https://kevincrawfordknight.github.io/papers/p5.pdf"                                                  class="article-card">An Overview of Probabilistic Tree Transducers for NLP</a>
 
   <center>2004</center>
   <p><br>
@@ -235,10 +235,10 @@
 
   <center>2003</center>
   <p><br>
-  <a href="papers/mtsummit03.pdf"                                          class="article-card">Syntax‑based Language Models for Machine Translation</a>
+  <a href="https://kevincrawfordknight.github.io/papers/mtsummit03.pdf"                                          class="article-card">Syntax‑based Language Models for Machine Translation</a>
   <a href="http://www.aclweb.org/anthology/P/P03/P03-1040.pdf"             class="article-card">Feature‑Rich Statistical Translation of Noun Phrases</a>
   <a href="http://www.aclweb.org/anthology/N03-1024.pdf"                   class="article-card">Syntax‑based Alignment of Multiple Translations</a>
-  <a href="papers/teaching-mt.pdf"                                         class="article-card">Teaching Statistical Machine Translation</a>
+  <a href="https://kevincrawfordknight.github.io/papers/teaching-mt.pdf"                                         class="article-card">Teaching Statistical Machine Translation</a>
   <a href="http://www.aclweb.org/anthology/N03-2016"                       class="article-card">Cognates Can Improve Statistical Translation Models</a>
   <a href="http://aclweb.org/anthology/N/N03/N03-2026.pdf"                 class="article-card">Desperately Seeking Cebuano</a>
   <a href="http://www.aclweb.org/anthology/E03-1076"                       class="article-card">Empirical Methods for Compound Splitting</a>
@@ -247,7 +247,7 @@
   <p><br>
   <a href="https://link.springer.com/content/pdf/10.1007%2F3-540-45820-4_16.pdf" class="article-card">Using a Large Monolingual Corpus to Improve Translation Accuracy</a>
   <a href="http://www.aclweb.org/anthology/W02-0902.pdf"                   class="article-card">Learning a Translation Lexicon from Monolingual Corpora</a>
-  <a href="papers/HLT02.ps"                                                class="article-card">Named Entity Translation — Extended Abstract</a>
+  <a href="https://kevincrawfordknight.github.io/papers/HLT02.ps"                                                class="article-card">Named Entity Translation — Extended Abstract</a>
   <a href="http://www.aclweb.org/anthology/P/P02/P02-1051.pdf"             class="article-card">Translating Named Entities Using Monolingual and Bilingual Resources</a>
   <a href="http://www.aclweb.org/anthology/W/W02/W02-0505.pdf"             class="article-card">Machine Transliteration of Names in Arabic Text</a>
   <a href="http://www.aclweb.org/anthology/P/P02/P02-1039.pdf"             class="article-card">A Decoder for Syntax‑Based Statistical MT</a>
@@ -268,20 +268,20 @@
   <center>1999</center>
   <p><br>
   <a href="http://www.aclweb.org/anthology/J/J99/J99-4005.pdf"             class="article-card">Decoding Complexity in Word‑Replacement Translation Models</a>
-  <a href="papers/wkbk.pdf"                                                class="article-card">A Statistical MT Tutorial Workbook</a>
+  <a href="https://kevincrawfordknight.github.io/papers/wkbk.pdf"                                                class="article-card">A Statistical MT Tutorial Workbook</a>
   <a href="http://www.aclweb.org/anthology/W/W99/W99-0906.pdf"             class="article-card">A Computational Approach to Deciphering Unknown Scripts</a>
 
   <center>1998</center>
   <p><br>
   <a href="http://www.aclweb.org/anthology/J/J98/J98-4003.pdf"             class="article-card">Machine Transliteration</a>
-  <a href="papers/mt-wfst.ps"                                              class="article-card">Translation with Finite‑State Devices</a>
+  <a href="https://kevincrawfordknight.github.io/papers/mt-wfst.ps"                                              class="article-card">Translation with Finite‑State Devices</a>
   <a href="http://www.aclweb.org/anthology/P/P98/P98-1116.pdf"             class="article-card">Generation that Exploits Corpus‑based Statistical Knowledge</a>
   <a href="http://www.aclweb.org/anthology/W/W98/W98-1005.pdf"             class="article-card">Translating Names and Technical Terms in Arabic Text</a>
   <a href="http://www.aclweb.org/anthology/W/W98/W98-1426.pdf"             class="article-card">The Practical Value of N‑Grams in Generation</a>
 
   <center>1997</center>
   <p><br>
-  <a href="papers/aimag97.pdf"                                             class="article-card">Automating Knowledge Acquisition for Machine Translation</a>
+  <a href="https://kevincrawfordknight.github.io/papers/aimag97.pdf"                                             class="article-card">Automating Knowledge Acquisition for Machine Translation</a>
   <a href="http://www.aclweb.org/anthology/P/P97/P97-1017.pdf"             class="article-card">Machine Transliteration</a>
 
   <center>1996</center>
@@ -291,22 +291,22 @@
   <center>1995</center>
   <p><br>
   <a href="http://www.aclweb.org/anthology/P/P95/P95-1034.pdf"             class="article-card">Two‑Level, Many‑Paths Generation</a>
-  <a href="papers/ijcai95-gaps.ps"                                         class="article-card">Filling Knowledge Gaps in a Broad‑Coverage MT System</a>
-  <a href="papers/ijcai95-glosser.ps"                                      class="article-card">Unification‑Based Glossing</a>
+  <a href="https://kevincrawfordknight.github.io/papers/ijcai95-gaps.ps"                                         class="article-card">Filling Knowledge Gaps in a Broad‑Coverage MT System</a>
+  <a href="https://kevincrawfordknight.github.io/papers/ijcai95-glosser.ps"                                      class="article-card">Unification‑Based Glossing</a>
 
   <center>1994</center>
   <p><br>
-  <a href="papers/amta94-integrating.ps"                                   class="article-card">Integrating Knowledge Bases and Statistics in MT</a>
+  <a href="https://kevincrawfordknight.github.io/papers/amta94-integrating.ps"                                   class="article-card">Integrating Knowledge Bases and Statistics in MT</a>
   <a href="http://www.aaai.org/Papers/AAAI/1994/AAAI94-118.pdf"            class="article-card">Building a Large‑Scale Knowledge Base for Machine Translation</a>
   <a href="http://www.aaai.org/Papers/AAAI/1994/AAAI94-119.pdf"            class="article-card">Automated Postediting of Documents</a>
 
   <center>1990</center>
   <p><br>
-  <a href="papers/p58-knight.pdf"                                          class="article-card">Connectionist Ideas and Algorithms</a>
+  <a href="https://kevincrawfordknight.github.io/papers/p58-knight.pdf"                                          class="article-card">Connectionist Ideas and Algorithms</a>
 
   <center>1989</center>
   <p><br>
-  <a href="papers/unification-knight.pdf"                                  class="article-card">Unification: A Multidisciplinary Survey</a>
+  <a href="https://kevincrawfordknight.github.io/papers/unification-knight.pdf"                                  class="article-card">Unification: A Multidisciplinary Survey</a>
 
 </div>
 
