--- a/ai/articles.html
+++ b/ai/articles.html
@@ -29,7 +29,7 @@
   <a href="http://www.aclweb.org/anthology/P/P98/P98-1116.pdf"             class="article-card">Generation that Exploits Corpus‑based Statistical Knowledge (1998)</a>
   <a href="http://www.aclweb.org/anthology/W/W99/W99-0906.pdf"             class="article-card">A Computational Approach to Deciphering Unknown Scripts (1999)</a>
   <a href="https://kevincrawfordknight.github.io/papers/wkbk.pdf"                                                class="article-card">A Statistical MT Tutorial Workbook (1999)</a>
-  <a href="http://www.aclweb.org/anthology/P/P01/P01-1067.pdf"             class="article-card">A Syntax‑Based Statistical Translation Model</a (2001)>
+  <a href="http://www.aclweb.org/anthology/P/P01/P01-1067.pdf"             class="article-card">A Syntax‑Based Statistical Translation Model (2001)</a (2001)>
   <a href="http://www.aclweb.org/anthology/N/N04/N04-1035.pdf"             class="article-card">What’s in a Translation Rule? (2004)</a>
   <a href="http://www.aclweb.org/anthology/W/W11/W11-1202.pdf"             class="article-card">The Copiale Cipher (2011)</a>
   <a href="http://www.aclweb.org/anthology/P/P11/P11-1002.pdf"             class="article-card">Deciphering Foreign Language (2011)</a>
@@ -53,7 +53,7 @@
   <a href="https://arxiv.org/abs/2109.09597"      class="article-card">Two Approaches to Building Collaborative, Task‑Oriented Dialog Agents through Self‑Play</a>
 
   <center>2020</center>
-  <p><br>
+  <p>
   <a href="https://arxiv.org/pdf/2010.08185.pdf"                               class="article-card">DiDi's Machine Translation System for WMT2020</a>
   <a href="https://arxiv.org/pdf/2010.04746.pdf"                               class="article-card">Solving Historical Dictionary Codes with a Neural Language Model</a>
   <a href="https://arxiv.org/pdf/2010.04744.pdf"                               class="article-card">Learning to Pronounce Chinese Without a Pronunciation Dictionary</a>
@@ -61,7 +61,7 @@
   <a href="https://www.aclweb.org/anthology/2020.acl-main.756.pdf"             class="article-card">Parallel Corpus Filtering via Pre‑trained Language Models</a>
 
   <center>2019</center>
-  <p><br>
+  <p>
   <a href="https://arxiv.org/abs/1810.04297"                               class="article-card">Decipherment of Historical Manuscripts</a>
   <a href="https://rdcu.be/bRVDW"                                           class="article-card">Neighbors Helping the Poor: Improving Low‑Resource Machine Translation Using Related Languages</a>
   <a href="https://www.aclweb.org/anthology/P19-1293"                       class="article-card">Translating Translationese: A Two‑Step Approach to Unsupervised Machine Translation</a>
@@ -69,7 +69,7 @@
   <a href="https://www.cs.jhu.edu/~npeng/papers/AAAI19-story-planning.pdf"  class="article-card">Plan‑And‑Write: Towards Better Automatic Storytelling</a>
 
   <center>2018</center>
-  <p><br>
+  <p>
   <a href="https://arxiv.org/pdf/1804.07875.pdf"                            class="article-card">Multi‑lingual Common Semantic Space Construction via Cluster‑consistent Word Embedding</a>
   <a href="http://aclweb.org/anthology/P18-1213"                            class="article-card">Modeling Naive Psychology of Characters in Simple Commonsense Stories</a>
   <a href="http://aclweb.org/anthology/P18-2042"                            class="article-card">Paper Abstract Writing through Rewriting Mechanism</a>
@@ -83,7 +83,7 @@
   <a href="http://aclweb.org/anthology/C18-1313"                            class="article-card">AMR Beyond the Sentence: the Multi‑sentence AMR Corpus</a>
 
   <center>2017</center>
-  <p><br>
+  <p>
   <a href="http://aclweb.org/anthology/D17-1266.pdf"                        class="article-card">Deciphering Related Languages</a>
   <a href="http://www.mdpi.com/1099-4300/19/1/15"                           class="article-card">Humans Outperform Machines at the Bilingual Shannon Game</a>
   <a href="http://aclweb.org/anthology/P17-4008.pdf"                        class="article-card">Hafez: an Interactive Poetry Generation System</a>
@@ -97,7 +97,7 @@
 <div class="article-list">
 
   <center>2016</center>
-  <p><br>
+  <p>
   <a href="https://aclweb.org/anthology/D16-1126.pdf" class="article-card">Generating Topical Poetry</a>
   <a href="http://www.aclweb.org/anthology/D16-1248.pdf" class="article-card">Why Neural Translations are the Right Length</a>
   <a href="https://aclweb.org/anthology/D16-1159.pdf" class="article-card">Does String‑Based Neural MT Learn Source Syntax?</a>
@@ -115,7 +115,7 @@
   <a href="http://dl.acm.org/citation.cfm?id=2857052" class="article-card">From Nyushu Script to Translation</a>
 
   <center>2015</center>
-  <p><br>
+  <p>
   <a href="https://www.aclweb.org/anthology/D/D15/D15-1136.pdf" class="article-card">Parsing English into Abstract Meaning Representation Using Syntax‑Based Machine Translation</a>
   <a href="http://www.aclweb.org/anthology/D15-1105.pdf" class="article-card">How Much Information Does a Human Translator Add to the Original?</a>
   <a href="http://www.anthology.aclweb.org/P/P15/P15-1081.pdf" class="article-card">Unifying Bayesian Inference and Vector Space Models for Improved Decipherment</a>
@@ -125,7 +125,7 @@
   <a href="http://usc-isi-i2.github.io/papers/szekely15-iswc.pdf" class="article-card">Building and Using a Knowledge Graph to Combat Human Trafficking</a>
 
   <center>2014</center>
-  <p><br>
+  <p>
   <a href="http://www.lrec-conf.org/proceedings/lrec2014/pdf/1080_Paper.pdf" class="article-card">Mapping between English Strings and Reentrant Semantic Graphs</a>
   <a href="http://www.aclweb.org/anthology/P14-2046.pdf" class="article-card">How to Speak a Language without Knowing It</a>
   <a href="http://www.aclweb.org/anthology/P14-2115.pdf" class="article-card">Be Appropriate and Funny: Automatic Entity Morph Encoding</a>
@@ -135,7 +135,7 @@
   <a href="https://aclweb.org/anthology/D/D14/D14-1185.pdf" class="article-card">Cipher Type Detection</a>
 
   <center>2013</center>
-  <p><br>
+  <p>
   <a href="http://www.aclweb.org/anthology/D13-1173.pdf" class="article-card">Dependency‑Based Decipherment for Resource‑Limited Machine Translation</a>
   <a href="http://www.aclweb.org/anthology/W13-2322" class="article-card">Abstract Meaning Representation for Sembanking</a>
   <a href="http://aclweb.org/anthology/P/P13/P13-1091.pdf" class="article-card">Parsing Graphs with Hyperedge Replacement Grammars</a>
@@ -146,7 +146,7 @@
   <div class="article-list">
 
   <center>2012</center>
-  <p><br>
+  <p>
   <a href="http://www.aclweb.org/anthology/C12-1083.pdf" class="article-card">Semantics‑Based Machine Translation with Hyperedge Replacement Grammars</a>
   <a href="http://www.aclweb.org/anthology/W/W12/W12-4209.pdf" class="article-card">Towards Probabilistic Acceptors and Transducers for Feature Structures</a>
   <a href="http://www.aclweb.org/anthology/W12-6207" class="article-card">DAGGER: A Toolkit for Automata on Directed Acyclic Graphs</a>
@@ -154,7 +154,7 @@
   <a href="http://www.aclweb.org/anthology/P/P12/P12-2016.pdf" class="article-card">Decoding Running Key Ciphers</a>
 
   <center>2011</center>
-  <p><br>
+  <p>
   <a href="http://www.aclweb.org/anthology/P/P11/P11-1002.pdf" class="article-card">Deciphering Foreign Language</a>
   <a href="http://www.aclweb.org/anthology/P/P11/P11-1025.pdf" class="article-card">Bayesian Inference for Zodiac and Other Homophonic Ciphers</a>
   <a href="http://www.aclweb.org/anthology/P/P11/P11-2014.pdf" class="article-card">Unsupervised Discovery of Rhyme Schemes</a>
@@ -162,7 +162,7 @@
   <a href="http://www.aclweb.org/anthology/W/W11/W11-1202.pdf" class="article-card">The Copiale Cipher</a>
 
   <center>2010</center>
-  <p><br>
+  <p>
   <a href="http://www.aclweb.org/anthology/D/D10/D10-1051.pdf" class="article-card">Automatic Analysis of Rhythmic Poetry</a>
   <a href="http://www.aclweb.org/anthology/J/J10/J10-2004.pdf" class="article-card">Re‑Structuring, Re‑Labeling and Re‑Aligning for SMT</a>
   <a href="http://www.aclweb.org/anthology/W/W10/W10-2502.pdf" class="article-card">A Decoder for Probabilistic Synchronous Tree Insertion Grammars</a>
@@ -175,7 +175,7 @@
   <a href="http://www.aclweb.org/anthology/P/P10/P10-1107.pdf" class="article-card">A Statistical Model for Lost Language Decipherment</a>
 
   <center>2009</center>
-  <p><br>
+  <p>
   <a href="https://kevincrawfordknight.github.io/papers/bayes-with-tears.pdf" class="article-card">Bayesian Inference with Tears</a>
   <a href="http://www.aclweb.org/anthology/J/J09/J09-4009.pdf" class="article-card">Binarization of Synchronous Context‑Free Grammars</a>
   <a href="http://www.aclweb.org/anthology/D/D09/D09-1076.pdf" class="article-card">Synchronous Tree Adjoining Machine Translation</a>
@@ -191,7 +191,7 @@
   <a href="http://www.informaworld.com/smpp/ftinterface~content=a914962270~fulltext=713240930" class="article-card">Attacking Decipherment Problems with Low‑Order N‑gram Models</a>
 
   <center>2008</center>
-  <p><br>
+  <p>
   <a href="http://www.aclweb.org/anthology/J/J08/J08-3004.pdf" class="article-card">Training Tree Transducers</a>
   <a href="http://www.aclweb.org/anthology/W/W08/W08-0306.pdf" class="article-card">Using Syntax to Improve Word Alignment Precision</a>
   <a href="http://www.aclweb.org/anthology/P/P08/P08-1045.pdf" class="article-card">Name Translation in SMT: Learning When to Transliterate</a>
@@ -201,14 +201,14 @@
   <a href="https://kevincrawfordknight.github.io/papers/amta2008fossum.pdf" class="article-card">Chinese‑English Word Alignments for PP‑Attachment</a>
 
   <center>2007</center>
-  <p><br>
+  <p>
   <a href="http://www.springerlink.com/content/xt718732x22n266q/fulltext.pdf" class="article-card">Capturing Practical Natural Language Transformations</a>
   <a href="http://www.aclweb.org/anthology/D/D07/D07-1038.pdf" class="article-card">Syntactic Re‑Alignment Models for Machine Translation</a>
   <a href="http://www.aclweb.org/anthology/D/D07/D07-1079.pdf" class="article-card">What Can Syntax‑Based MT Learn from Phrase‑Based MT?</a>
   <a href="http://www.aclweb.org/anthology/D/D07/D07-1078.pdf" class="article-card">Binarizing Syntax Trees to Improve SMT Accuracy</a>
 
   <center>2006</center>
-  <p><br>
+  <p>
   <a href="https://kevincrawfordknight.github.io/papers/lhuang-amta.pdf" class="article-card">Statistical Syntax‑Directed Translation with Extended Domain of Locality</a>
   <a href="https://kevincrawfordknight.github.io/papers/ciaa06.pdf" class="article-card">Tiburon: A Weighted Tree Automata Toolkit</a>
   <a href="https://kevincrawfordknight.github.io/papers/iraqi_interspeech.pdf" class="article-card">Building an English‑Iraqi Arabic MT System for Speech</a>
@@ -223,18 +223,18 @@
 <div class="article-list">
 
   <center>2005</center>
-  <p><br>
+  <p>
   <a href="http://www.aclweb.org/anthology/P/P05/P05-3025.pdf" class="article-card">Interactively Exploring a Machine Translation Model</a>
   <a href="http://ieeexplore.ieee.org/document/1416466/?reload=true"       class="article-card">Machine Translation in the Year 2004</a>
   <a href="https://kevincrawfordknight.github.io/papers/p5.pdf"                                                  class="article-card">An Overview of Probabilistic Tree Transducers for NLP</a>
 
   <center>2004</center>
-  <p><br>
+  <p>
   <a href="http://www.aclweb.org/anthology/N/N04/N04-1035.pdf" class="article-card">What’s in a Translation Rule?</a>
   <a href="http://www.aclweb.org/anthology/N/N04/N04-1014.pdf" class="article-card">Training Tree Transducers</a>
 
   <center>2003</center>
-  <p><br>
+  <p>
   <a href="https://kevincrawfordknight.github.io/papers/mtsummit03.pdf"                                          class="article-card">Syntax‑based Language Models for Machine Translation</a>
   <a href="http://www.aclweb.org/anthology/P/P03/P03-1040.pdf"             class="article-card">Feature‑Rich Statistical Translation of Noun Phrases</a>
   <a href="http://www.aclweb.org/anthology/N03-1024.pdf"                   class="article-card">Syntax‑based Alignment of Multiple Translations</a>
@@ -244,7 +244,7 @@
   <a href="http://www.aclweb.org/anthology/E03-1076"                       class="article-card">Empirical Methods for Compound Splitting</a>
 
   <center>2002</center>
-  <p><br>
+  <p>
   <a href="https://link.springer.com/content/pdf/10.1007%2F3-540-45820-4_16.pdf" class="article-card">Using a Large Monolingual Corpus to Improve Translation Accuracy</a>
   <a href="http://www.aclweb.org/anthology/W02-0902.pdf"                   class="article-card">Learning a Translation Lexicon from Monolingual Corpora</a>
   <a href="https://kevincrawfordknight.github.io/papers/HLT02.ps"                                                class="article-card">Named Entity Translation — Extended Abstract</a>
@@ -253,26 +253,26 @@
   <a href="http://www.aclweb.org/anthology/P/P02/P02-1039.pdf"             class="article-card">A Decoder for Syntax‑Based Statistical MT</a>
 
   <center>2001</center>
-  <p><br>
+  <p>
   <a href="http://www.aclweb.org/anthology/P/P01/P01-1067.pdf"             class="article-card">A Syntax‑Based Statistical Translation Model</a>
   <a href="http://www.aclweb.org/anthology/P/P01/P01-1030.pdf"             class="article-card">Fast Decoding and Optimal Decoding for Machine Translation</a>
   <a href="http://www.aclweb.org/anthology/W/W01/W01-0504.pdf"             class="article-card">Knowledge Sources for Word‑Level Translation Models</a>
 
   <center>2000</center>
-  <p><br>
+  <p>
   <a href="http://www.aaai.org/Papers/AAAI/2000/AAAI00-103.pdf"            class="article-card">Translating with Scarce Resources</a>
   <a href="http://www.aaai.org/Papers/AAAI/2000/AAAI00-107.pdf"            class="article-card">Preserving Ambiguities in Generation via Automata Intersection</a>
   <a href="http://www.aaai.org/Papers/AAAI/2000/AAAI00-109.pdf"            class="article-card">Estimating Word Translation Probabilities with EM</a>
   <a href="http://www.aaai.org/Papers/AAAI/2000/AAAI00-108.pdf"            class="article-card">Statistics‑Based Summarization — Sentence Compression</a>
 
   <center>1999</center>
-  <p><br>
+  <p>
   <a href="http://www.aclweb.org/anthology/J/J99/J99-4005.pdf"             class="article-card">Decoding Complexity in Word‑Replacement Translation Models</a>
   <a href="https://kevincrawfordknight.github.io/papers/wkbk.pdf"                                                class="article-card">A Statistical MT Tutorial Workbook</a>
   <a href="http://www.aclweb.org/anthology/W/W99/W99-0906.pdf"             class="article-card">A Computational Approach to Deciphering Unknown Scripts</a>
 
   <center>1998</center>
-  <p><br>
+  <p>
   <a href="http://www.aclweb.org/anthology/J/J98/J98-4003.pdf"             class="article-card">Machine Transliteration</a>
   <a href="https://kevincrawfordknight.github.io/papers/mt-wfst.ps"                                              class="article-card">Translation with Finite‑State Devices</a>
   <a href="http://www.aclweb.org/anthology/P/P98/P98-1116.pdf"             class="article-card">Generation that Exploits Corpus‑based Statistical Knowledge</a>
@@ -280,32 +280,32 @@
   <a href="http://www.aclweb.org/anthology/W/W98/W98-1426.pdf"             class="article-card">The Practical Value of N‑Grams in Generation</a>
 
   <center>1997</center>
-  <p><br>
+  <p>
   <a href="https://kevincrawfordknight.github.io/papers/aimag97.pdf"                                             class="article-card">Automating Knowledge Acquisition for Machine Translation</a>
   <a href="http://www.aclweb.org/anthology/P/P97/P97-1017.pdf"             class="article-card">Machine Transliteration</a>
 
   <center>1996</center>
-  <p><br>
+  <p>
   <a href="http://www.aaai.org/Papers/AAAI/1996/AAAI96-067.pdf"            class="article-card">Learning Word Meanings by Instruction</a>
 
   <center>1995</center>
-  <p><br>
+  <p>
   <a href="http://www.aclweb.org/anthology/P/P95/P95-1034.pdf"             class="article-card">Two‑Level, Many‑Paths Generation</a>
   <a href="https://kevincrawfordknight.github.io/papers/ijcai95-gaps.ps"                                         class="article-card">Filling Knowledge Gaps in a Broad‑Coverage MT System</a>
   <a href="https://kevincrawfordknight.github.io/papers/ijcai95-glosser.ps"                                      class="article-card">Unification‑Based Glossing</a>
 
   <center>1994</center>
-  <p><br>
+  <p>
   <a href="https://kevincrawfordknight.github.io/papers/amta94-integrating.ps"                                   class="article-card">Integrating Knowledge Bases and Statistics in MT</a>
   <a href="http://www.aaai.org/Papers/AAAI/1994/AAAI94-118.pdf"            class="article-card">Building a Large‑Scale Knowledge Base for Machine Translation</a>
   <a href="http://www.aaai.org/Papers/AAAI/1994/AAAI94-119.pdf"            class="article-card">Automated Postediting of Documents</a>
 
   <center>1990</center>
-  <p><br>
+  <p>
   <a href="https://kevincrawfordknight.github.io/papers/p58-knight.pdf"                                          class="article-card">Connectionist Ideas and Algorithms</a>
 
   <center>1989</center>
-  <p><br>
+  <p>
   <a href="https://kevincrawfordknight.github.io/papers/unification-knight.pdf"                                  class="article-card">Unification: A Multidisciplinary Survey</a>
 
 </div>
