--- a/likes/index.html
+++ b/likes/index.html
@@ -26,7 +26,7 @@
 
 <a href="https://en.wikipedia.org/wiki/Don%27t_Get_Me_Wrong_(song)" class="nounderline">Don't Get Me Wrong by Pretenders</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Tangerine_(Led_Zeppelin_song)" class="nounderline">Tangerine by Led Zeppelin</a><br><br>
-<a href="https://en.wikipedia.org/wiki/The_New_Drawing_on_the_Right_Side_of_the_Brain" class="nounderline">Drawing on the Right Side of the Brain</a><br><br>
+<a href="https://www.drawright.com/band-horizon" class="nounderline">Drawing on the Right Side of the Brain</a><br><br>
 <a href="https://www.soundtransit.org/" class="nounderline">Seattle Light Rail from SeaTac</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Scarface_(1983_film)" class="nounderline">Scarface</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Brazil_(1985_film)" class="nounderline">Brazil</a><br><br>
@@ -100,7 +100,7 @@
 <a href="https://en.wikipedia.org/wiki/Superman:_Red_Son" class="nounderline">Superman: Red Son</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Kumiko,_the_Treasure_Hunter" class="nounderline">Kumiko the Treasure Hunter</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Classical_Chinese_poetry" class="nounderline">Chinese classical poetry</a><br><br>
-<a href="https://en.wikipedia.org/wiki/New_England_(Billy_Bragg_song)" class="nounderline">New England by Billy Bragg (MacColl cover)</a><br><br>
+<a href="https://en.wikipedia.org/wiki/A_New_England" class="nounderline">New England by Billy Bragg (MacColl cover)</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Origami" class="nounderline">Origami</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Gary_Shteyngart" class="nounderline">Gary Shteyngart</a><br><br>
 <a href="https://en.wikipedia.org/wiki/No_Doubt" class="nounderline">No Doubt</a><br><br>
@@ -149,7 +149,7 @@
 <a href="https://en.wikipedia.org/wiki/Paul_Erd%C5%91s" class="nounderline">Paul Erdos</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Kick-Ass_(film)" class="nounderline">Kick-Ass</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Janelle_Mon%C3%A1e" class="nounderline">Janelle Monae</a><br><br>
-<a href="https://www.instagram.com/frankcoffee_kobe/" class="nounderline">Frank Coffee in Kobe, Japan</a><br><br>
+<a href="https://frank--company-jp.translate.goog/?_x_tr_sl=ja&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=sc" class="nounderline">Frank Coffee in Kobe, Japan</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Bletchley_Park" class="nounderline">Bletchley Park</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Orange_juice" class="nounderline">Freshly squeezed orange juice</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Denver_Art_Museum" class="nounderline">Denver Art Museum</a><br><br>
@@ -261,7 +261,7 @@
 <a href="https://en.wikipedia.org/wiki/Exile_in_Guyville" class="nounderline">6'1 by Liz Phair</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Grosse_Pointe_Blank" class="nounderline">Grosse Pointe Blank</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Taoism" class="nounderline">Taoism</a><br><br>
-<a href="https://www.davidlynchfoundation.org/news/2014-someone-is-in-my-house.html" class="nounderline">Someone is in my House (D. Lynch)</a><br><br>
+<a href="https://www.goodreads.com/book/show/40797097-david-lynch" class="nounderline">Someone is in my House (D. Lynch)</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Slacker_(film)" class="nounderline">Slacker</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Perfect_Day_(Lou_Reed_song)" class="nounderline">Perfect Day (K. MacColl version)</a><br><br>
 <a href="Link" class="nounderline">Favorite</a><br><br>
