--- a/likes/index.html
+++ b/likes/index.html
@@ -11,7 +11,7 @@
   <header>
     <nav class="navbar">
       <ul>
-        <li><a href="../newindex.html">Homepage</a></li>
+        <li><a href="../newindex.html">Back to Homepage</a></li>
       </ul>
     </nav>
     <div class="hero">
@@ -37,7 +37,6 @@
 <a href="https://en.wikipedia.org/wiki/Luch_(watch)" class="nounderline">Soviet wristwatches</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Fleabag" class="nounderline">Fleabag</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Richard_Pipes" class="nounderline">Richard Pipes</a><br><br>
-<a href="https://en.wikipedia.org/wiki/The_New_Drawing_on_the_Right_Side_of_the_Brain" class="nounderline">The Right Side of the Brain</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Don_DeLillo" class="nounderline">Don DeLillo</a><br><br>
 <a href="https://kevincrawfordknight.github.io/pictures/lrwp2.mp4" class="nounderline">My chess robot (The Lincoln)</a><br><br>
 <a href="https://en.wikipedia.org/wiki/In_the_First_Circle" class="nounderline">First Circle (Solzhenitsyn)</a><br><br>
@@ -90,7 +89,7 @@
 <a href="https://en.wikipedia.org/wiki/Sunken_Diamond" class="nounderline">Stanford Baseball, Klein Field</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Voynich_manuscript" class="nounderline">Voynich manuscript</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Serve_the_People!_(book)" class="nounderline">Serve the People!</a><br><br>
-<a href="https://en.wikipedia.org/wiki/Head_Over_Heels_(Japanese_Breakfast_song)" class="nounderline">Head Over Heels by Japanese Breakfast</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Japanese_Breakfast" class="nounderline">Head Over Heels by Japanese Breakfast</a><br><br>
 <a href="https://en.wikipedia.org/wiki/The_Florida_Project" class="nounderline">The Florida Project</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Convenience_Store_Woman" class="nounderline">Convenience Store Woman</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Haruki_Murakami" class="nounderline">Haruki Murakami</a><br><br>
@@ -158,7 +157,7 @@
 <a href="https://en.wikipedia.org/wiki/George_Carlin" class="nounderline">George Carlin</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Sexy_Sadie" class="nounderline">Sexy Sadie</a><br><br>
 <a href="https://en.wikipedia.org/wiki/John_von_Neumann" class="nounderline">John von Neumann</a><br><br>
-<a href="https://en.wikipedia.org/wiki/Pimsleur_language_learning_system" class="nounderline">Pimsleur Language Lessons</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Pimsleur_Language_Programs" class="nounderline">Pimsleur Language Lessons</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Santeria_(song)" class="nounderline">Santeria by Sublime</a><br><br>
 <a href="https://en.wikipedia.org/wiki/To_Live_and_Die_in_L.A._(film)" class="nounderline">To Live and Die in L.A.</a><br><br>
 <a href="https://www.yelp.com/biz/milcross-coffee-culver-city" class="nounderline">Meetings at Milcross Coffee</a><br><br>
@@ -241,7 +240,7 @@
 <a href="https://en.wikipedia.org/wiki/Eight-ball" class="nounderline">8-ball billiards</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Klara_and_the_Sun" class="nounderline">Klara and the Sun</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Reservoir_Dogs" class="nounderline">Reservoir Dogs</a><br><br>
-<a href="https://en.wikipedia.org/wiki/Bacurau_(film)" class="nounderline">Bacurau</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Bacurau" class="nounderline">Bacurau</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Pulp_Fiction" class="nounderline">Pulp Fiction</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Forbidden_Planet" class="nounderline">Forbidden Planet</a><br><br>
 <a href="https://en.wikipedia.org/wiki/No_Way_Out_(1987_film)" class="nounderline">No Way Out</a><br><br>
