--- a/likes/index.html
+++ b/likes/index.html
@@ -45,13 +45,36 @@
 <a href="https://en.wikipedia.org/wiki/Eugene_Charniak" class="nounderline">Eugene Charniak</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Jake_Gyllenhaal" class="nounderline">Jake Gyllenhaal</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Surfing" class="nounderline">Surfing</a><br><br>
+<a href="https://www.guisados.la/" class="nounderline">Guisado’s tacos</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Pi_(film)" class="nounderline">Pi</a><br><br>
+<a href="https://www.1hotels.com/central-park" class="nounderline">1 Hotel Central Park</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Elvis_(1968_TV_program)" class="nounderline">Elvis ‘68 comeback special</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Chungking_Express" class="nounderline">Chungking Express</a><br><br>
+
+<a href="https://kevincrawfordknight.github.io/doubled-venice-compressed.mp4" class="nounderline"></a>Venice CA<br><br>
+<a href="https://kevincrawfordknight.github.io/extra/news-gabbler.html" class="nounderline"></a>Generative news<br><br>
+<a href="https://kevincrawfordknight.github.io/inexplicably.html" class="nounderline"></a>Tongue twisters<br><br>
+<a href="https://kevincrawfordknight.github.io" class="nounderline"></a>Random unordered shit<br><br>
+<a href="https://kevincrawfordknight.github.io/pics-cooking" class="nounderline"></a>Cooking<br><br>
+<a href="https://kevincrawfordknight.github.io/pics-ballona" class="nounderline"></a>Ballona lagoon<br><br>
+
+<a href="https://en.wikipedia.org/wiki/The_Studio_(TV_series)" class="nounderline">The Studio</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Beyond_Belief_(song)" class="nounderline">Beyond Belief by Elvis Costello</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Play_It_as_It_Lays" class="nounderline">Play it as it Lays</a><br><br>
+<a href="https://www.minibarbyjoseandres.com/" class="nounderline">Barmini</a><br><br>
+<a href="https://www.audiusa.com/en/models/a5/s5-cabriolet/2024/overview/" class="nounderline">Audi S5 convertible</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Black_Mirror" class="nounderline">Black Mirror</a><br><br>
+<a href="https://onewheel.com/" class="nounderline">Onewheel</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Maniac_(miniseries)" class="nounderline">Maniac</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Tinker_Tailor_Soldier_Spy_(film)" class="nounderline">Tinker, Tailor, Soldier, Spy</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Barry_(TV_series)" class="nounderline">Barry</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Brad_Pitt" class="nounderline">Brad Pitt</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Watchmen" class="nounderline">Watchmen</a><br><br>
 <a href="https://en.wikipedia.org/wiki/The_Lion_in_Winter_(1968_film)" class="nounderline">The Lion in Winter</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Fred_Jelinek" class="nounderline">Fred Jelinek</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Parasite_(2019_film)" class="nounderline">Parasite</a><br><br>
 <a href="https://en.wikipedia.org/wiki/ZZ_Ward" class="nounderline">Love 3X by ZZ Ward</a><br><br>
-<a href="https://en.wikipedia.org/wiki/Doin%27_Time" class="nounderline">Diet Mountain Dew by Lana Del Rey</a><br><br>
+<a href="https://lanadelrey.fandom.com/wiki/Diet_Mountain_Dew_(song)" class="nounderline">Diet Mountain Dew by Lana Del Rey</a><br><br>
 <a href="https://en.wikipedia.org/wiki/New_Orleans" class="nounderline">New Orleans</a><br><br>
 <a href="https://en.wikipedia.org/wiki/True_Detective_(season_1)" class="nounderline">True Detective Season 1</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Jim_Thompson_(writer)" class="nounderline">Jim Thompson</a><br><br>
@@ -65,7 +88,7 @@
 <a href="https://en.wikipedia.org/wiki/Dei%C3%A0" class="nounderline">Deia, Mallorca</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Different_People" class="nounderline">Different People by No Doubt</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Cryin%27" class="nounderline">Cryin' by Aerosmith</a><br><br>
-<a href="https://en.wikipedia.org/wiki/The_Embedding" class="nounderline">The Embedding</a><br><br>
+<a href="https://www.goodreads.com/book/show/941146.The_Embedding" class="nounderline">The Embedding</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Apocalypse_Now" class="nounderline">Apocalypse Now</a><br><br>
 <a href="https://www.toppotdoughnuts.com/" class="nounderline">Top Pot Donuts in Seattle</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Frances_Ha" class="nounderline">Frances Ha</a><br><br>
@@ -257,7 +280,8 @@
 <a href="https://en.wikipedia.org/wiki/Kiss_Kiss_Bang_Bang" class="nounderline">Kiss Kiss Bang Bang</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Kurt_Vonnegut" class="nounderline">Kurt Vonnegut</a><br><br>
 <a href="https://en.wikipedia.org/wiki/David_Lodge_(author)" class="nounderline">David Lodge</a><br><br>
-<a href="https://en.wikipedia.org/wiki/Exile_in_Guyville" class="nounderline">6'1 by Liz Phair</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Exile_in_Guyville" class="nounderline">Exit in Guyville</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Twin_Peaks_season_3" class="nounderline">Twin Peaks s3</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Grosse_Pointe_Blank" class="nounderline">Grosse Pointe Blank</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Taoism" class="nounderline">Taoism</a><br><br>
 <a href="https://www.goodreads.com/book/show/40797097-david-lynch" class="nounderline">Someone is in my House (D. Lynch)</a><br><br>
