--- a/likes/index.html
+++ b/likes/index.html
@@ -51,12 +51,12 @@
 <a href="https://en.wikipedia.org/wiki/Elvis_(1968_TV_program)" class="nounderline">Elvis ‘68 comeback special</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Chungking_Express" class="nounderline">Chungking Express</a><br><br>
 
-<a href="https://kevincrawfordknight.github.io/doubled-venice-compressed.mp4" class="nounderline"></a>Venice CA<br><br>
-<a href="https://kevincrawfordknight.github.io/extra/news-gabbler.html" class="nounderline"></a>Generative news<br><br>
-<a href="https://kevincrawfordknight.github.io/inexplicably.html" class="nounderline"></a>Tongue twisters<br><br>
-<a href="https://kevincrawfordknight.github.io" class="nounderline"></a>Random unordered shit<br><br>
-<a href="https://kevincrawfordknight.github.io/pics-cooking" class="nounderline"></a>Cooking<br><br>
-<a href="https://kevincrawfordknight.github.io/pics-ballona" class="nounderline"></a>Ballona lagoon<br><br>
+<a href="https://kevincrawfordknight.github.io/doubled-venice-compressed.mp4" class="nounderline"></a>Venice CA</a><br><br>
+<a href="https://kevincrawfordknight.github.io/extra/news-gabbler.html" class="nounderline"></a>Generative news</a><br><br>
+<a href="https://kevincrawfordknight.github.io/inexplicably.html" class="nounderline"></a>Tongue twisters</a><br><br>
+<a href="https://kevincrawfordknight.github.io" class="nounderline"></a>Random unordered shit</a><br><br>
+<a href="https://kevincrawfordknight.github.io/pics-cooking" class="nounderline"></a>Cooking</a><br><br>
+<a href="https://kevincrawfordknight.github.io/pics-ballona" class="nounderline"></a>Ballona lagoon</a><br><br>
 
 <a href="https://en.wikipedia.org/wiki/The_Studio_(TV_series)" class="nounderline">The Studio</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Beyond_Belief_(song)" class="nounderline">Beyond Belief by Elvis Costello</a><br><br>
@@ -287,7 +287,6 @@
 <a href="https://www.goodreads.com/book/show/40797097-david-lynch" class="nounderline">Someone is in my House (D. Lynch)</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Slacker_(film)" class="nounderline">Slacker</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Perfect_Day_(Lou_Reed_song)" class="nounderline">Perfect Day (K. MacColl version)</a><br><br>
-<a href="Link" class="nounderline">Favorite</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Integer_linear_programming" class="nounderline">Integer linear programming</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Lady_Stardust" class="nounderline">Lady Stardust</a><br><br>
 <a href="https://en.wikipedia.org/wiki/A_Canticle_for_Leibowitz" class="nounderline">Canticle for Leibowitz</a><br><br>
