--- a/ai/articles.html
+++ b/ai/articles.html
@@ -41,7 +41,10 @@
   <a href="https://aclweb.org/anthology/D16-1126.pdf"                      class="article-card">Generating Topical Poetry (2016)</a>
   <a href="http://aclweb.org/anthology/N18-1205.pdf"                       class="article-card">Recurrent Neural Networks as Weighted Language Recognizers (2018)</a>
 
+  <br>
+  for full article list, please see <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf">CV</a></li>
 
+<!--
   <center>2021</center>
   <p>
   <a href="https://arxiv.org/abs/2109.09577"      class="article-card">MeetDot: Videoconferencing with Live Translation Captions</a>
@@ -308,20 +311,9 @@
   <p>
   <a href="https://kevincrawfordknight.github.io/papers/unification-knight.pdf"                                  class="article-card">Unification: A Multidisciplinary Survey</a>
 
+-->
+
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     </div>
