--- a/art/contact.html
+++ b/art/contact.html
@@ -14,7 +14,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="paintings.html">Paintings</a></li>
         <li><a href="book.html">Book</a></li>
-        <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf" target="_blank">CV</a></li>
+        <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf">CV</a></li>
       </ul>
     </nav>
     <h1 class="page-title">Contact</h1>
