--- a/art/index.html
+++ b/art/index.html
@@ -13,7 +13,7 @@
       <ul>
         <li><a href="paintings.html">Paintings</a></li>
         <li><a href="book.html">Book</a></li>
-        <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf" target="_blank">CV</a></li>
+        <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf">CV</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
