--- a/likes/index.html
+++ b/likes/index.html
@@ -51,12 +51,12 @@
 <a href="https://en.wikipedia.org/wiki/Elvis_(1968_TV_program)" class="nounderline">Elvis ‘68 comeback special</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Chungking_Express" class="nounderline">Chungking Express</a><br><br>
 
-<a href="https://kevincrawfordknight.github.io/doubled-venice-compressed.mp4" class="nounderline"></a>Venice CA</a><br><br>
-<a href="https://kevincrawfordknight.github.io/extra/news-gabbler.html" class="nounderline"></a>Generative news</a><br><br>
-<a href="https://kevincrawfordknight.github.io/inexplicably.html" class="nounderline"></a>Tongue twisters</a><br><br>
-<a href="https://kevincrawfordknight.github.io" class="nounderline"></a>Random unordered shit</a><br><br>
-<a href="https://kevincrawfordknight.github.io/pics-cooking" class="nounderline"></a>Cooking</a><br><br>
-<a href="https://kevincrawfordknight.github.io/pics-ballona" class="nounderline"></a>Ballona lagoon</a><br><br>
+<a href="https://kevincrawfordknight.github.io/doubled-venice-compressed.mp4" class="nounderline">Venice CA</a><br><br>
+<a href="https://kevincrawfordknight.github.io/extra/news-gabbler.html" class="nounderline">Generative news</a><br><br>
+<a href="https://kevincrawfordknight.github.io/inexplicably.html" class="nounderline">Tongue twisters</a><br><br>
+<a href="https://kevincrawfordknight.github.io" class="nounderline">Random unordered shit</a><br><br>
+<a href="https://kevincrawfordknight.github.io/pics-cooking" class="nounderline">Cooking</a><br><br>
+<a href="https://kevincrawfordknight.github.io/pics-ballona" class="nounderline">Ballona lagoon</a><br><br>
 
 <a href="https://en.wikipedia.org/wiki/The_Studio_(TV_series)" class="nounderline">The Studio</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Beyond_Belief_(song)" class="nounderline">Beyond Belief by Elvis Costello</a><br><br>
