--- a/likes/index.html
+++ b/likes/index.html
@@ -15,7 +15,8 @@
       </ul>
     </nav>
     <div class="hero">
-      <h1>Kevin Knight</h1>
+	    <h1>Kevin Knight</h1><br><br>
+      <h3>likes</h3>
     </div>
   </header>
 
