--- a/likes/index.html
+++ b/likes/index.html
@@ -15,15 +15,14 @@
       </ul>
     </nav>
     <div class="hero">
-	    <h1>Kevin Knight</h1><br><br>
-      <h3>likes</h3>
+	    <h1>Kevin Knight</h1>
     </div>
   </header>
 
   <!-- Main content -->
   <main>
   <center>
-
+	  likes<br><br>
 
 <a href="https://en.wikipedia.org/wiki/Don%27t_Get_Me_Wrong_(song)" class="nounderline">Don't Get Me Wrong by Pretenders</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Tangerine_(Led_Zeppelin_song)" class="nounderline">Tangerine by Led Zeppelin</a><br><br>
@@ -39,7 +38,7 @@
 <a href="https://en.wikipedia.org/wiki/Fleabag" class="nounderline">Fleabag</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Richard_Pipes" class="nounderline">Richard Pipes</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Don_DeLillo" class="nounderline">Don DeLillo</a><br><br>
-<a href="https://kevincrawfordknight.github.io/pictures/lrwp2.mp4" class="nounderline">My chess robot (The Lincoln)</a><br><br>
+<a href="https://kevincrawfordknight.github.io/pictures/lrwp2.mp4" class="nounderline">My chess robot, the Lincoln</a><br><br>
 <a href="https://en.wikipedia.org/wiki/In_the_First_Circle" class="nounderline">First Circle (Solzhenitsyn)</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Boot" class="nounderline">All kindsa boots</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Cryptanalysis" class="nounderline">Historical cryptology</a><br><br>
