--- a/ai/articles.html
+++ b/ai/articles.html
@@ -15,14 +15,16 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <h1 class="page-title">Articles</h1>
+    <h1 class="page-title">Selected Articles</h1>
   </header>
 
   <main>
     <div class="article-list">
 
+	    <!--
   <center>Selected Papers</center>
   <p>
+	    -->
 
   <a href="https://kevincrawfordknight.github.io/papers/p58-knight.pdf"                                           class="article-card">Connectionist Ideas and Algorithms (1990)</a>
   <a href="http://www.aclweb.org/anthology/P/P97/P97-1017.pdf"             class="article-card">Machine Transliteration (1997)</a>
@@ -42,7 +44,10 @@
   <a href="http://aclweb.org/anthology/N18-1205.pdf"                       class="article-card">Recurrent Neural Networks as Weighted Language Recognizers (2018)</a>
 
   <br>
-  for full article list, please see <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf">CV</a></li>
+  
+  <center> 
+ For full article list, please click CV at top
+  </center>
 
 <!--
   <center>2021</center>
