--- a/ai/students.html
+++ b/ai/students.html
@@ -16,11 +16,14 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
+    <!--
     <h1 class="page-title">Students</h1>
+    -->
   </header>
 
   <main>
-	  <center>PhD</center>
+	  <!--	  <center>PhD</center> -->
+    <h1 class="page-title">PhD Students</h1>
 	  <p><br>
     <div class="article-list">
       <a href="" class="article-card">Nima Pourdamghani </a>
@@ -40,7 +43,8 @@
       <a href="" class="article-card">Shou-De Lin (co-)</a>
     </div>
     <p><br>
-	  <center>Masters</center>
+    <h1 class="page-title">Masters Students</h1>
+	  <!--	  <center>Masters</center> -->
     <p><br>
     <div class="article-list">
       <a href="" class="article-card">Bryant Huang </a>
@@ -48,7 +52,8 @@
 
     </div>
     <p><br>
-	  <center>Undergrad</center>
+    <!--	  <center>Undergrad</center> -->
+    <h1 class="page-title">Undergraduate Students</h1>
     <p><br>
     <div class="article-list">
       <a href="" class="article-card">Barret Zoph</a>
